# markit-app

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bookmarks.rs  collections.rs  folders.rs  metadata.rs  mod.rs  notes.rs  tags.rs  workspaces.rs
src-tauri/src/db/: init.rs  mod.rs  models.rs
src/components/bookmarks/: AddBookmarkInput.tsx  BookmarkCard.tsx  BookmarkCompactItem.tsx  BookmarkContextMenu.tsx  BookmarkListItem.tsx  BookmarkPanel.tsx
src/components/common/: ContextMenu.tsx  Favicon.tsx  ResizeHandle.tsx  Toast.tsx
src/components/detail/: BookmarkEditor.tsx  DetailPanel.tsx  NotesArea.tsx
src/components/layout/: AppHeader.tsx
src/components/sidebar/: CollectionList.tsx  FolderTree.tsx  NotesList.tsx  Sidebar.tsx  TagTree.tsx  WorkspaceSidebar.tsx
src/stores/: useBookmarkStore.ts  useDataStore.ts  useThemeStore.ts  useToastStore.ts  useViewStore.ts  useWorkspaceStore.ts
src/types/: index.ts
src/utils/: api.ts  helpers.ts
